--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <body>
         <script>
             // Redirect to the homepage
-            window.location.href = "/react-router-demo";
+            window.location.href = "/rr-demo";
         </script>
     </body>
 </html>
